--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,11 @@ img {
   padding: #0bd;
 }
 
+/*MENU*/
+.cover-menu {
+  background-image: url(../images/cover-menu-s.webp);
+}
+
 /*フッター*/
 .page-footer {
   background-image: url(../images/footer-s.webp);
