--- a/css/style.css
+++ b/css/style.css
@@ -357,8 +357,18 @@ item p {
     margin-bottom: .5rem;
   }
 
-  item p {
+  .item p {
     font-size: 1rem;
+  }
+
+  .item-big {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+
+  .item-big img {
+    height: 94.5%;
+    width: 100%;
   }
 
   /*フッター*/
